fix(review): address all CodeRabbit feedback
escalation.service.ts:
- Add UserLike interface to replace 'any' type for type safety
- Remove unused 'context' parameter from resolveEscalationContact
- Add .sort() for deterministic query ordering
- Add error logging for observability
- Externalize fallback email to ESCALATION_FALLBACK_EMAIL env var
- Add fallback logging for debugging

i18n/ar.json:
- Add fm.workOrders.attachmentsCount translation
- Add fm.workOrders.new.* subsection (requiredFields, success, woNumber, uploadHint)
- Add fm.workOrders.attachments.missingUrl translation
- Achieve complete parity with en.json structure

API routes:
- Update all resolveEscalationContact calls to match new signature
- Remove unused moduleParam variable from context route
- Update escalate, context routes, and requireVerifiedDocs middleware

Addresses CodeRabbit comments:
- Type safety improvements (Major)
- Localization parity (Major)
- Query optimization (Major)
- Error handling (Major)
- Configuration externalization (Major)
- Unused variable cleanup (Minor)

--- a/docs/translations/translation-audit.csv
+++ b/docs/translations/translation-audit.csv
@@ -1,1 +1,74 @@
 type,key,bare,inEN,inAR,files
+USED_MISSING,fm.properties.detail.errors.noPropertyId,fm.properties.detail.errors.noPropertyId,false,false,"Fixzit/app/fm/properties/[id]/page.tsx"
+USED_MISSING,fm.vendors.detail.errors.noVendorId,fm.vendors.detail.errors.noVendorId,false,false,"Fixzit/app/fm/vendors/[id]/page.tsx"
+USED_MISSING,workOrders.new.requiredFields,workOrders.new.requiredFields,false,false,"Fixzit/app/fm/work-orders/new/page.tsx"
+USED_MISSING,workOrders.new.success,workOrders.new.success,false,false,"Fixzit/app/fm/work-orders/new/page.tsx"
+USED_MISSING,workOrders.new.woNumber,workOrders.new.woNumber,false,false,"Fixzit/app/fm/work-orders/new/page.tsx"
+USED_MISSING,workOrders.new.uploadHint,workOrders.new.uploadHint,false,false,"Fixzit/app/fm/work-orders/new/page.tsx"
+USED_MISSING,workOrders.attachmentsCount,workOrders.attachmentsCount,false,false,"Fixzit/app/fm/work-orders/new/page.tsx"
+USED_MISSING,help.article.comments.title,help.article.comments.title,false,false,"Fixzit/app/help/[slug]/page.tsx"
+USED_MISSING,help.article.comments.placeholder,help.article.comments.placeholder,false,false,"Fixzit/app/help/[slug]/page.tsx"
+USED_MISSING,help.article.comments.submit,help.article.comments.submit,false,false,"Fixzit/app/help/[slug]/page.tsx"
+USED_MISSING,help.article.comments.success,help.article.comments.success,false,false,"Fixzit/app/help/[slug]/page.tsx"
+USED_MISSING,help.article.comments.error,help.article.comments.error,false,false,"Fixzit/app/help/[slug]/page.tsx"
+USED_MISSING,help.article.comments.auth,help.article.comments.auth,false,false,"Fixzit/app/help/[slug]/page.tsx"
+USED_MISSING,helpCenterV2.title,helpCenterV2.title,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.subtitle,helpCenterV2.subtitle,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.askAssistant,helpCenterV2.askAssistant,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.createTicket,helpCenterV2.createTicket,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.viewTickets,helpCenterV2.viewTickets,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.interactiveTutorials,helpCenterV2.interactiveTutorials,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.interactiveSubtitle,helpCenterV2.interactiveSubtitle,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.viewAllTutorials,helpCenterV2.viewAllTutorials,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.helpArticles,helpCenterV2.helpArticles,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.articlesSubtitle,helpCenterV2.articlesSubtitle,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.readMore,helpCenterV2.readMore,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.emptyArticles,helpCenterV2.emptyArticles,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.updated,helpCenterV2.updated,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.loadingArticles,helpCenterV2.loadingArticles,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.generalCategory,helpCenterV2.generalCategory,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.systemOverview,helpCenterV2.systemOverview,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.overviewSubtitle,helpCenterV2.overviewSubtitle,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.propertiesTitle,helpCenterV2.propertiesTitle,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.propertiesCopy,helpCenterV2.propertiesCopy,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.workOrdersTitle,helpCenterV2.workOrdersTitle,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.workOrdersCopy,helpCenterV2.workOrdersCopy,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.vendorsTitle,helpCenterV2.vendorsTitle,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.vendorsCopy,helpCenterV2.vendorsCopy,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.financeTitle,helpCenterV2.financeTitle,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.financeCopy,helpCenterV2.financeCopy,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.untitledArticle,helpCenterV2.untitledArticle,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.tutorials.gettingStarted.title,helpCenterV2.tutorials.gettingStarted.title,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.tutorials.gettingStarted.description,helpCenterV2.tutorials.gettingStarted.description,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.categories.facilityManagement,helpCenterV2.categories.facilityManagement,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.tutorials.gettingStarted.duration,helpCenterV2.tutorials.gettingStarted.duration,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.tutorials.firstWorkOrder.title,helpCenterV2.tutorials.firstWorkOrder.title,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.tutorials.firstWorkOrder.description,helpCenterV2.tutorials.firstWorkOrder.description,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.categories.workOrders,helpCenterV2.categories.workOrders,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.tutorials.firstWorkOrder.duration,helpCenterV2.tutorials.firstWorkOrder.duration,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.tutorials.vendorManagement.title,helpCenterV2.tutorials.vendorManagement.title,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.tutorials.vendorManagement.description,helpCenterV2.tutorials.vendorManagement.description,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.categories.procurement,helpCenterV2.categories.procurement,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.tutorials.vendorManagement.duration,helpCenterV2.tutorials.vendorManagement.duration,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.tutorials.tenantRelations.title,helpCenterV2.tutorials.tenantRelations.title,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.tutorials.tenantRelations.description,helpCenterV2.tutorials.tenantRelations.description,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.categories.customerService,helpCenterV2.categories.customerService,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.tutorials.tenantRelations.duration,helpCenterV2.tutorials.tenantRelations.duration,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.tutorials.financialReporting.title,helpCenterV2.tutorials.financialReporting.title,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.tutorials.financialReporting.description,helpCenterV2.tutorials.financialReporting.description,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.categories.finance,helpCenterV2.categories.finance,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.tutorials.financialReporting.duration,helpCenterV2.tutorials.financialReporting.duration,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,helpCenterV2.fallbackNotice,helpCenterV2.fallbackNotice,false,false,"Fixzit/app/help/page.tsx"
+USED_MISSING,logout.success,logout.success,false,false,"Fixzit/app/logout/page.tsx"
+USED_MISSING,logout.redirecting,logout.redirecting,false,false,"Fixzit/app/logout/page.tsx"
+USED_MISSING,logout.error,logout.error,false,false,"Fixzit/app/logout/page.tsx"
+USED_MISSING,logout.errorMessage,logout.errorMessage,false,false,"Fixzit/app/logout/page.tsx"
+USED_MISSING,logout.redirectingAfterError,logout.redirectingAfterError,false,false,"Fixzit/app/logout/page.tsx"
+USED_MISSING,nav.admin,nav.admin,false,false,"Fixzit/components/TopBar.tsx"
+USED_MISSING,careers.uploadFailed,careers.uploadFailed,false,false,"Fixzit/components/careers/JobApplicationForm.tsx"
+USED_MISSING,careers.presignFailed,careers.presignFailed,false,false,"Fixzit/components/careers/JobApplicationForm.tsx"
+USED_MISSING,careers.resumeUploadNote,careers.resumeUploadNote,false,false,"Fixzit/components/careers/JobApplicationForm.tsx"
+USED_MISSING,careers.resumeScanStatus,careers.resumeScanStatus,false,false,"Fixzit/components/careers/JobApplicationForm.tsx"
+USED_MISSING,finance.balance.forbidden,finance.balance.forbidden,false,false,"Fixzit/components/finance/BalanceSheetWidget.tsx"
+USED_MISSING,finance.income.forbidden,finance.income.forbidden,false,false,"Fixzit/components/finance/IncomeStatementWidget.tsx"
+USED_MISSING,workOrders.attachments.missingUrl,workOrders.attachments.missingUrl,false,false,"Fixzit/components/fm/WorkOrdersView.tsx"
