--- a/i18n/sources/workOrders.translations.json
+++ b/i18n/sources/workOrders.translations.json
@@ -140,6 +140,12 @@
     "workOrders.new.subtitle": "Create a new work order for maintenance or services",
     "workOrders.new.title": "New Work Order",
     "workOrders.new.titlePlaceholder": "Enter work order title...",
+    "workOrders.new.requiredFields": "Please fill in all required fields",
+    "workOrders.new.success": "Work order created successfully",
+    "workOrders.new.woNumber": "Work Order #{{number}}",
+    "workOrders.new.uploadHint": "Drag and drop files here, or click to browse",
+    "workOrders.attachmentsCount": "{{count}} attachments",
+    "workOrders.attachments.missingUrl": "Attachment URL is missing",
     "workOrders.notes": "Notes",
     "workOrders.parts.actions.add": "Add",
     "workOrders.parts.actions.createPO": "Create Purchase Order",
@@ -387,6 +393,12 @@
     "workOrders.new.subtitle": "إنشاء أمر عمل جديد للصيانة أو الخدمات",
     "workOrders.new.title": "أمر عمل جديد",
     "workOrders.new.titlePlaceholder": "أدخل عنوان أمر العمل...",
+    "workOrders.new.requiredFields": "يرجى ملء جميع الحقول المطلوبة",
+    "workOrders.new.success": "تم إنشاء أمر العمل بنجاح",
+    "workOrders.new.woNumber": "أمر العمل #{{number}}",
+    "workOrders.new.uploadHint": "اسحب وأفلت الملفات هنا، أو انقر للتصفح",
+    "workOrders.attachmentsCount": "{{count}} مرفقات",
+    "workOrders.attachments.missingUrl": "رابط المرفق مفقود",
     "workOrders.notes": "ملاحظات",
     "workOrders.parts.actions.add": "إضافة",
     "workOrders.parts.actions.createPO": "إنشاء أمر شراء",
